# symbolic_agent

./: .gitignore  README.md  example_neo4j.txt  pyproject.toml  schema_dump.json  test.ipynb  test.py  test2.ipynb
Logs/: 0. 生成langda提示词.md  1. Fact Rel.md  10. Instance Keys.md  11. Rel 的滞后性.md  12. instance merge and meta.md  13. CSV.md  14.Rule.md  15. Rule convention.md  16. schema and rule.md  17. rule 数据验证.md  18. 从持久化数据创建.md  19. schema ID 更改.md  2. ArgSpec 语法糖.md  3. Fact Rel schema调整.md  4. FactLayer and Registry.md  5. fact rel和llm的兼容.md  6. Instances.md  7. rel语法讨论.md  8. CSV.md  9. rel CSV.md  ME CODEX.md  er.md  er_recipes.md
archive/factpy/: __init__.py  compiler.py  ir.py  model.py
docs/: Authoring 层契约 fixtures.md  Authoring 层契约.md  审计.md  导出与运行.md  断言层 证据层.md  规则.md  规范.md  视图层.md  设计.md
factpy_kernel/: __init__.py
factpy_kernel/audit/: __init__.py  assertions.py  dto.py  query.py  reader.py  static_ui.py
factpy_kernel/authoring/: __init__.py  derivation_compile.py  diagnostic_codes.py  dto.py  preflight.py  rule_compile.py  schema_compile.py  session.py
factpy_kernel/derivation/: accept.py  candidates.py
factpy_kernel/evidence/: write_protocol.py
factpy_kernel/export/: package.py  pred_norm.py  tsv_v1.py
factpy_kernel/mapping/: canon.py
factpy_kernel/policy/: active.py  chosen.py  policy_ir.py
factpy_kernel/protocol/: __init__.py  idref_v1.py
factpy_kernel/rules/: rule_ir.py  where_compile.py  where_eval.py
samples/: companies.csv  company_hq.csv  friends.csv  works_at.csv
src/: README.md
tests/: test_protocol_v1.py
(+148 files in other folders)
