[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new_symbolic_agent"
version = "0.1.0"
description = "Lightweight, IR-first logic representation and mapping."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
new_symbolic_agent = ["samples/*.csv", "examples/*.py"]
