[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symir"
version = "0.1.0"
description = "Lightweight, IR-first logic representation and mapping."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symir = ["samples/*.csv", "examples/*.py"]
